--- a/assets/css/estiloshome.css
+++ b/assets/css/estiloshome.css
@@ -15,8 +15,8 @@
     left: 0;
     top: 0;
     height: 100%;
-    padding: 1rem 1.7rem;
-    background: rgba(1, 66, 106, 1);
+    padding: 0rem 1.7rem;
+    background:rgba(1, 66, 106, 1);
     color: #fff;
 }
 
@@ -66,10 +66,12 @@
 
 .menu-head {
     text-transform: uppercase;
-    color: #8da2fb;
-    font-size: .75rem;
-    font-weight: 500;
-    margin-bottom: .5rem;
+    text-decoration: none;
+    margin-left: 10px;
+    color: #fffcfc;
+    font-size: .95rem;
+    font-weight: 300;
+    margin-bottom: 1rem;
 
 }
 
@@ -91,7 +93,8 @@
 .barralateral-menu li a span {
     font-size: 1.5rem;
     display: inline-block;
-    margin-bottom: .8rem;
+    margin-bottom: .6rem;
+    
 }
 
 header {
@@ -132,4 +135,67 @@ main {
     padding: 1.5rem;
     background: #f1f5f9;
     min-height: calc(100vh - 70px);
+}
+
+.page-registro {
+    max-width: calc(100vw-70px);
+}
+
+.icon {
+    width: 35px;
+    height: 35px;
+    
+}
+
+.parrafo1 {
+    margin-left: 170px;
+    float: center;
+    margin-top: 130px;
+    padding: 25px 25px;
+    text-align: justify;
+    align-items: center;
+    border-radius: 15px;
+    width: 60vw;
+    height: 160px;
+    background: #1b83eb;
+    color: white;
+    font-size: 20px;
+    font-family: sans-serif;
+}
+
+.parrafo2 {
+    margin-left: 240px;
+    justify-content: center;
+    float: center;
+    margin-top: 60px;
+    padding: 25px 25px;
+    text-align: justify;
+    align-items: center;
+    border-radius: 15px;
+    width: 50vw;
+    height: 110px;
+    background: #1b83eb;
+    color: white;
+    font-size: 20px;
+    font-family: sans-serif;
+}
+
+.parrafohome {
+    background: #fff;
+    width: calc(100vw-140px);
+    height: 80vh;
+    border-radius: 10px;
+}
+
+.parrafohome h3 {
+    text-transform: uppercase;
+    padding-top: 70px;
+    text-align: center;
+    color: #1b83eb;
+    border: #092744;
+    font-size: 45px;
+    margin-top: 50px;
+    
+    
+    
 }
